# smart-amenities-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/routes/: admin.py  auth.py  map.py
app/core/: database.py  security.py
app/models/: models.py
app/schemas/: auth_schemas.py  schemas.py
app/services/: terminal_d_graph_service.py
data/: mock_airport_nodes.json
